--- a/src/app/components/ui/contact-details/contact-details.component.html
+++ b/src/app/components/ui/contact-details/contact-details.component.html
@@ -97,7 +97,7 @@
     [folder]="folder"
     [data]="current || {}"
     [filter]="filter"
-    [defaultOpen]="i === 0"
+    [defaultOpen]="true"
   >
   </ui-folder-card>
 </ng-container>
